--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public"]
 	path = public
-	url = git@github.com:junffy/junffy.github.io.git
+	url = https://github.com/junffy/junffy.github.io.git
 	branch = main
