--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -8,8 +8,9 @@
 appearance:
   theme_day: minimal
   theme_night: minimal
-  font: minimal
+  font: 
   font_size: L
+  day_night: true
 
 # SEO
 
@@ -18,8 +19,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: ''
+    twitter: ''
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -53,8 +54,8 @@ footer:
 # Localization
 
 locale:
-  date_format: 'Jan 2, 2006'
-  time_format: '3:04 PM'
+  date_format: 'Jan 2006'
+  time_format: '15:04'
   address_format: en-us
 
 # Site features
@@ -66,7 +67,7 @@ features:
       - r
       - latex
   math:
-    enable: false
+    enable: true
   privacy_pack:
     enable: false
   repository:
