--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = public
 	url = https://github.com/junffy/junffy.github.io.git
 	branch = main
+[submodule "junffy.github.io"]
+	path = junffy.github.io
+	url = https://github.com/junffy/junffy.github.io.git
+	branch = main
