--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,24 +5,23 @@
 
 main:
   - name: Home
-    url: '#about'
+    url: "#about"
     weight: 10
   - name: Publications
-    url: '#publications'
+    url: "#featured"
     weight: 20
   - name: Experience
-    url: '#experience'
+    url: "#experience"
     weight: 30
   - name: Skills
-    url: '#skills'
+    url: "#skills"
     weight: 40
   - name: Archivements
-    url: '#accomplishments'
+    url: "#accomplishments"
     weight: 50
   - name: Contact
-    url: '#contact'
+    url: "#contact"
     weight: 60
-
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 #  - name: CV
