--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,9 +13,9 @@ main:
   - name: Experience
     url: "#experience"
     weight: 30
-  - name: Skills
-    url: "#skills"
-    weight: 40
+  #   - name: Skills
+  #     url: "#skills"
+  #    weight: 40
   - name: Achievements
     url: "#accomplishments"
     weight: 50
